kubernetes-task/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: mycart-app
  template:
    metadata:
      labels:
        app: mycart-app
    spec:
      containers: 
        - name: cart-container
          image: clahandevops/flower-img:latest
          ports:
            - containerPort: 3015
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec: 
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3015
      protocol: TCP
  selector:
    app: mycart-app
