kubernetes-task/httpd-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers: 
        - name: adservice-container
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
spec: 
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx-app
