kubernetes-task/cart-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: cart-ingress
  annotations: 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: cart
  rules: 
    - http:
        paths:
          - path: /clahandevops/flower-img:latest(/|$)(.*)
            pathType: Prefix
            backend: 
              service:
                name: cart-service
                port: 
                  number: 3000
