kubernetes-task/cartingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: cart-ingress
  annotations: 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules: 
    - http:
        paths:
          - path: /(/|$)(.*)
            pathType: Prefix
            backend: 
              service:
                name: httpd-service
                port: 
                  number: 80
